# tokio-uring-ooo

./: Cargo.toml  DESIGN.md  README.md
benches/criterion/: no_op.rs
benches/lai/: no_op.rs
examples/: cat.rs  mix.rs  tcp_listener.rs  tcp_listener_fixed_buffers.rs  tcp_stream.rs  test_create_dir_all.rs  udp_socket.rs  unix_listener.rs  unix_stream.rs  wrk-bench.rs
src/: lib.rs
src/buf/: bounded.rs  slice.rs
src/buf/fixed/: pool.rs  registry.rs
src/fs/: create_dir_all.rs  directory.rs  file.rs  open_options.rs  statx.rs
src/io/: accept.rs  close.rs  connect.rs  fallocate.rs  fsync.rs  mkdir_at.rs  noop.rs  open.rs  pool.rs  read.rs  read_fixed.rs  readv.rs  recv_from.rs  recvmsg.rs  rename_at.rs  send_to.rs  send_zc.rs  sendmsg.rs  sendmsg_zc.rs  socket.rs  statx.rs  unlink_at.rs  write.rs  write_fixed.rs  writev.rs  writev_all.rs
src/net/: udp.rs
src/net/tcp/: listener.rs  stream.rs
src/net/unix/: listener.rs  stream.rs
src/runtime/: mod.rs
src/runtime/driver/: handle.rs  mod.rs
src/runtime/driver/op/: mod.rs
tests/: buf.rs  driver.rs  fixed_buf.rs  fs_directory.rs  fs_file.rs  runtime.rs
